--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
-.logo.vite:hover {
+.logo.vite{
   filter: drop-shadow(0 0 2em #747bff);
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
