--- a/src/App.css
+++ b/src/App.css
@@ -151,3 +151,18 @@ label, input[type="checkbox"] + label {
   display: inline-block;
   margin-left: 5px; /* Add some space between the checkbox and the label */
 }
+
+.download-progress {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+}
+
+.download-progress h3 {
+  margin-bottom: 10px;
+}
+
+.download-progress p {
+  margin: 0;
+}
