--- a/components/DownloadProgress.css
+++ b/components/DownloadProgress.css
@@ -1,27 +1,27 @@
 .download-progress {
-  width: 95%;
-  height: 20px;
-  background-color: #1a1a1a;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
+    width: 95%;
+    height: 20px;
+    background-color: #1a1a1a;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .progress-bar {
-  height: 100%;
-  background-color: #4caf50;
-  transition: width 0.3s ease-in-out;
+    height: 100%;
+    background-color: #006400;
+    transition: width 0.3s ease-in-out;
 }
 
 #progress-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #000;
-  font-size: 12px;
-  font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffff;
+    font-size: 12px;
+    font-weight: bold;
 }
