--- a/src/Download.css
+++ b/src/Download.css
@@ -1,21 +1,22 @@
 .download-container {
-  margin: 0;
-  padding-top: 80px; /* Adjust this value based on your header height */
-  display: flex;
-  flex-direction: column;
+    margin: 0;
+    padding-top: 80px;
+    /* Adjust this value based on your header height */
+    display: flex;
+    flex-direction: column;
 }
 
 .download-list {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 .download-item {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .folder-name {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
